МС отредактирован для работы с несколькими методами внутри типа оплаты